syntax="proto3";
option go_package = "./pb";
package pb;
import "freeconf/pb/val.proto";

enum OptionalBool {
      NOT_SPECIFIED = 0;
      TRUE = 1;
      FALSE = 2;
}

enum Status {
      CURRENT = 0;
      DEPRECATED = 1;
      OBSOLETE = 2;
}

message Module {
      string ident = 1;
      string namespace = 2;
      string prefix = 3;
      string description = 4;
      string contact = 5;
      string organization = 6;
      string reference = 7;
      string version = 8;
      repeated Revision revisions = 9;
      repeated DataDef definitions = 10;
      repeated Notification notifications = 11;
      repeated Rpc actions = 12;
      repeated Identity identities = 13;
      repeated Feature features = 14;
      // feature set = 15
      repeated Extension extensions = 16;
}

message RpcInput {
      string reference = 1;
      repeated Extension extensions = 2;
      repeated DataDef definitions = 3;
}

message RpcOutput {
      string reference = 1;
      repeated Extension extensions = 2;
      repeated DataDef definitions = 3;
}

message Rpc {
      string ident = 1;
      string description = 2;
      repeated Extension extensions = 3;
      string reference = 4;
      RpcInput input = 5;
      RpcOutput output = 6;
}

message Notification {
      string ident = 1;
      string description = 2;
      repeated Extension extensions = 3;
      string reference = 4;
      repeated DataDef definitions = 5;
}

message ExtensionDefArg {
    string ident = 1;
    string description = 2;
    string reference = 3;
    bool yinElement = 5;
}

message ExtensionDef {
    string ident = 1;
    string description = 2;
    string reference = 3;
    Status status = 4;
    repeated ExtensionDefArg arguments = 5;
}

message Extension {
      string ident = 1;
      string prefix = 2;
      string keyword = 3;
      string definition = 4;
      repeated string arguments = 5;
}

message Container {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated Extension extensions = 4;
      repeated DataDef definitions = 5;
      OptionalBool config = 14;
      OptionalBool mandatory = 15;
      repeated Rpc actions = 16;
      repeated Notification notifications = 12;
}

message Type {
      string ident = 1;
      string description = 2;
      string reference = 3;
      Format format = 4;
}

message Leaf {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated Extension extensions = 4;
      Type type = 5;
      OptionalBool config = 14;
      OptionalBool mandatory = 15;
      string defaultVal = 16;
      string units = 17;
}

message List {
    string ident = 1;
    string description = 2;
    string reference = 3;
    repeated Extension extensions = 4;
    repeated DataDef definitions = 5;
    OptionalBool config = 14;
    OptionalBool mandatory = 15;
    OptionalBool unbounded = 16;
    repeated Rpc actions = 17;
    repeated Notification notifications = 18;
    repeated string key = 19;
}

message LeafList {
    string ident = 1;
    string description = 2;
    string reference = 3;
    repeated Extension extensions = 4;
    OptionalBool config = 14;
    OptionalBool mandatory = 15;
    string units = 17;
}

message DataDef {
      oneof def_oneof {
           Container container = 1;
           Leaf leaf = 2;
           LeafList leafList = 3;
           List list = 4;
           Choice choice = 5;
           Any any = 6;
      }
}

message Any {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated Extension extensions = 4;
      OptionalBool config = 14;
      OptionalBool mandatory = 15;  
}

message Identity {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated string baseIds = 4;
      // derived
      // ifs
      repeated Extension extensions = 7;
}

message Feature {
      string ident = 1;
      string description = 2;
      string reference = 3;
      // ifs
      repeated Extension extensions = 7;
}

message Revision {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated Extension extensions = 7;
}

message Choice {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated Extension extensions = 4;
      Status status = 5;
      OptionalBool config = 14;
      OptionalBool mandatory = 15;
      string defaultVal = 16;
      repeated ChoiceCase cases = 9;
      // ifs  
}

message ChoiceCase {
      string ident = 1;
      string description = 2;
      string reference = 3;
      repeated Extension extensions = 4;
      repeated DataDef definitions = 5;
      // when
      // ifs
}